<resources>
	<string name="app_name">TaxSE</string>

	<string name="log_out">Log Out</string>
	<string name="title_activity_login">Sign in</string>

	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>

	<string name="unknown_error">An unknown error occurred</string>
	<string name="no_internet_connection">No internet connection</string>
	<string name="sign_in_cancelled">Sign in cancelled</string>
	<string name="unknown_response">Unexpected onActivityResult response code</string>
	<string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
	<string name="sign_out_failed">Sign out failed</string>

	<!-- filing calendar -->
	<string-array name="payer_type_a_list">
		<item>Employed</item>
		<item>Self-Employed</item>
	</string-array>
	<string-array name="payer_type_b_list">
		<item>Professional</item>
		<item>Sole-Proprietor</item>
	</string-array>
	<string-array name="period_type_a_list">
		<item>Calendar year</item>
		<item>Fiscal year</item>
	</string-array>
	<string name="add">Add</string>
	<string name="cancel">Cancel</string>
	<string name="add_confirm">Are you sure you want to add these to your calendar?</string>
	<string name="def_yr">2017</string>
	<string name="previous">&lt;</string>
	<string name="next">&gt;</string>
	<string name="add_filing">Add</string>
	<string name="done">Done</string>
	<string name="enable_conf_msg">Enable push notifications to Filing Calendar?</string>
	<string name="enable">Enable</string>
	<string name="no">No</string>



	> &gt;
</resources>
