<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="vertical">

	<TextView android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginEnd="20dp"
						android:layout_marginStart="20dp"
						android:layout_marginTop="50dp"
						android:gravity="center"
						android:text="FILING CALENDAR"
						android:textSize="18sp"/>

	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:background="@android:color/white"
		android:columnCount="3"
		android:elevation="2dp">

		<Button
			android:id="@+id/btn_previous_yr"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/previous"
			android:textColor="@android:color/white"
			android:textSize="18sp"/>

		<TextView
			android:id="@+id/tv_yr_displayed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/def_yr"
			android:textSize="18sp"/>

		<Button
			android:id="@+id/btn_next_yr"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/next"
			android:textColor="@android:color/white"
			android:textSize="18sp"/>

	</GridLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:background="@android:color/white"
		android:elevation="2dp"
		android:orientation="vertical">
		<GridView
			android:id="@+id/grid_months"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:numColumns="3"/>

	</LinearLayout>

	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="10dp"
		android:columnCount="3">

		<Button
			android:id="@+id/btn_add_form"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/ic_note_add_24dp"
			android:text="@string/add_filing"
			android:textAllCaps="false"
			android:textColor="@android:color/white"
			android:backgroundTint="@color/colorAccent"
			android:textSize="18sp"/>

		<android.support.v4.widget.Space
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:textSize="18sp"/>

		<Button
			android:id="@+id/btn_done"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/done"
			android:textAllCaps="false"
			android:textColor="@android:color/white"
			android:backgroundTint="@color/colorAccent"
			android:textSize="18sp"/>

	</GridLayout>

</LinearLayout>