<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
							xmlns:app="http://schemas.android.com/apk/res-auto"
							xmlns:tools="http://schemas.android.com/tools"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center_horizontal"
							android:orientation="vertical"
							android:paddingBottom="@dimen/activity_vertical_margin"
							android:paddingLeft="@dimen/activity_horizontal_margin"
							android:paddingRight="@dimen/activity_horizontal_margin"
							android:paddingTop="@dimen/activity_vertical_margin"
							tools:context="com.khenix.taxse.LoginActivity">

	<!-- Login progress -->
	<ProgressBar
		android:id="@+id/login_progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone"/>

	<ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/email_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:layout_gravity="center"
				android:src="@mipmap/ic_launcher_round"
				tools:ignore="ContentDescription"/>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<AutoCompleteTextView
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:imeOptions="actionNext"
					android:inputType="textEmailAddress"
					android:maxLines="1"/>

			</android.support.design.widget.TextInputLayout>


			<android.support.design.widget.TextInputLayout
				android:id="@+id/input_layout_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:textColorHint="@color/text_lighter_grey"
				app:passwordToggleEnabled="true"
				app:passwordToggleTint="@color/colorAccent">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/edit_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:inputType="textPassword"
					android:maxLines="1"/>
			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/email_sign_in_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:backgroundTint="@color/colorAccent"
				android:text="@string/action_sign_in"
				android:textAllCaps="false"
				android:textColor="@android:color/white"
				android:textSize="16sp"
				android:textStyle="bold"/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>
